--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "url": "https://github.com/billybrown/cameracollection/issues"
   },
   "homepage": "https://github.com/billybrown/cameracollection",
+  "engines": {
+    "node": "~0.10.33"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-gh-pages": "^0.9.1",
