updated gitignore and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# for node and grunt
+# Logs
+logs
+*.log
+
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Dependency directory
+# Commenting this out is preferred by some people, see
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 
 # for bower package management
@@ -9,6 +18,3 @@ bower_components
 
 # for sass
 .sass-cache
-
-# for github pages auto publishing
-.grunt
