--- a/package.json
+++ b/package.json
@@ -25,24 +25,25 @@
   },
   "homepage": "https://github.com/billybrown/cameracollection",
   "engines": {
-    "node": "~0.10.33"
+    "node": "~8.12.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
     "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-csso": "^0.7.1",
-    "grunt-gh-pages": "^0.10.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-htmlmin": "^3.0.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-csso": "^2.2.4",
+    "grunt-gh-pages": "^3.1.0",
     "grunt-node-version": "^1.0.0",
-    "grunt-sass": "^1.0.0",
+    "grunt-sass": "^3.0.2",
     "grunt-size-report": "^0.1.1",
-    "grunt-uncss": "^0.4.2",
-    "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.2.1"
+    "grunt-uncss": "^0.8.5",
+    "jit-grunt": "^0.10.0",
+    "node-sass": "^4.10.0",
+    "time-grunt": "^2.0.0"
   }
 }
